// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppointmentDetails component DRS work order with an appointment when the work order can be scheduled shows a link to reschedule an appointment with DRS Web Booking Manager 1`] = `
<DocumentFragment>
  <div
    class="appointment-details"
  >
    <p
      class="govuk-!-font-size-14"
    >
      Appointment details
    </p>
    <div
      class="lbh-body-s govuk-!-margin-0"
    >
      <p
        class="govuk-!-font-size-14"
      >
        19 Mar 2021, 12:00-18:00
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AppointmentDetails component DRS work order with an appointment when the work order cannot be scheduled does not show a reschedule link but shows the existing appointment 1`] = `
<DocumentFragment>
  <div
    class="appointment-details"
  >
    <p
      class="govuk-!-font-size-14"
    >
      Appointment details
    </p>
    <div
      class="lbh-body-s govuk-!-margin-0"
    >
      <p
        class="govuk-!-font-size-14"
      >
        19 Mar 2021, 12:00-18:00
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AppointmentDetails component DRS work order with no appointment when the work order can be scheduled shows a link to schedule an appointment with DRS Web Booking Manager 1`] = `
<DocumentFragment>
  <div
    class="appointment-details"
  >
    <p
      class="govuk-!-font-size-14"
    >
      Appointment details
    </p>
    <div
      class="lbh-body-s govuk-!-margin-0"
    />
  </div>
</DocumentFragment>
`;

exports[`AppointmentDetails component DRS work order with no appointment when the work order cannot be scheduled does not show a schedule link 1`] = `
<DocumentFragment>
  <div
    class="appointment-details"
  >
    <p
      class="govuk-!-font-size-14"
    >
      Appointment details
    </p>
    <div
      class="lbh-body-s govuk-!-margin-0"
    >
      <p
        class="lbh-!-font-weight-bold"
      >
        Not applicable
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AppointmentDetails component Work order (non DRS) with an appointment when the work order can be scheduled shows a link to reschedule an appointment 1`] = `
<DocumentFragment>
  <div
    class="appointment-details"
  >
    <p
      class="govuk-!-font-size-14"
    >
      Appointment details
    </p>
    <div
      class="lbh-body-s govuk-!-margin-0"
    >
      <p
        class="govuk-!-font-size-14"
      >
        19 Mar 2021, 12:00-18:00
      </p>
      <a
        class="lbh-link"
        href="/work-orders/10000012/appointment/edit"
      >
        Reschedule appointment
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AppointmentDetails component Work order (non DRS) with an appointment when the work order cannot be scheduled does not show a reschedule link but shows the existing appointment 1`] = `
<DocumentFragment>
  <div
    class="appointment-details"
  >
    <p
      class="govuk-!-font-size-14"
    >
      Appointment details
    </p>
    <div
      class="lbh-body-s govuk-!-margin-0"
    >
      <p
        class="govuk-!-font-size-14"
      >
        19 Mar 2021, 12:00-18:00
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AppointmentDetails component Work order (non DRS) with no appointment when the work order can be scheduled shows a link to schedule an appointment 1`] = `
<DocumentFragment>
  <div
    class="appointment-details"
  >
    <p
      class="govuk-!-font-size-14"
    >
      Appointment details
    </p>
    <div
      class="lbh-body-s govuk-!-margin-0"
    >
      <a
        class="lbh-link"
        href="/work-orders/10000012/appointment/new"
      >
        Schedule appointment
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AppointmentDetails component Work order (non DRS) with no appointment when the work order cannot be scheduled does not show a schedule link 1`] = `
<DocumentFragment>
  <div
    class="appointment-details"
  >
    <p
      class="govuk-!-font-size-14"
    >
      Appointment details
    </p>
    <div
      class="lbh-body-s govuk-!-margin-0"
    >
      <p
        class="lbh-!-font-weight-bold"
      >
        Not applicable
      </p>
    </div>
  </div>
</DocumentFragment>
`;
